# gold-vpn

./: .gitignore  podman-compose.yml
ansible/: site.yml
ansible/roles/bootstrap/defaults/: main.yml
ansible/roles/bootstrap/tasks/: main.yml
ansible/roles/singbox/defaults/: main.yml
ansible/roles/singbox/handlers/: main.yml
ansible/roles/singbox/tasks/: configure.yml  generate_keys.yml  install.yml  main.yml  service.yml
ansible/roles/singbox/templates/: config.json.j2
backend/: Cargo.toml  Dockerfile
backend/src/: db.rs  main.rs
backend/src/config/: database.rs  mod.rs  models.rs  parser.rs
backend/src/handlers/: subscribe.rs
backend/src/routes/: health.rs  mod.rs  subscribe.rs
backend/src/utils/: mod.rs  platform.rs  secrets.rs
